crates/solidity-v2/testing/snapshots/diagnostics_output/structure/contract_should_be_abstract/inherited_function/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 3656] Error: Contract "B" should be marked as abstract.
   ╭─[input.sol:9:1]
   │
 9 │ contract B is A {}
   │ ─────────┬────────  
   │          ╰────────── Error occurred here.
───╯
